[gd_scene load_steps=3 format=3 uid="uid://fxv5hgqgs5ds"]

[ext_resource type="Script" path="res://scenes/UI/pause_menu.gd" id="1_o6534"]
[ext_resource type="PackedScene" uid="uid://dnsp4xgc387vm" path="res://scenes/UI/options_menu.tscn" id="2_n4544"]

[node name="pause_menu" type="Control"]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o6534")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.556863)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 50

[node name="Continue" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="options_menu" parent="MarginContainer" instance=ExtResource("2_n4544")]
layout_mode = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="exit_options" from="MarginContainer/options_menu" to="." method="_on_options_menu_exit_options"]
